# STM32-CAN-Bridge

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
Drivers/CMSIS/Core/: LICENSE.md  STMicroelectronics.CMSIS.pdsc  sbom_cdx.json
Inc/: can_bridge.h  flash_config.h  font.h  modbus_bridge.h  ssd1306.h  stm32f4xx_hal_conf.h  uart_io.h
Src/: can_bridge.c  fault_handler.c  flash_config.c  main.c  modbus_bridge.c  ssd1306.c  uart_io.c
docs/: CAN_PROTOCOL.md  MODBUS_PROTOCOL.md  SESSION_LOG_2026-06-28_can_interop.md  SESSION_LOG_2026-06-28_part2.md
